about,menu,contact pages added

--- a/menu.html
+++ b/menu.html
@@ -27,16 +27,16 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+                        <li class="active"><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
                         <li><a href="about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
 
                         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"
                                                 role="button" aria-haspopup="true"
                                                 aria-expanded="false">Menu<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="menu.html">Appetizers</a></li>
-                                <li><a href="menu.html">Appetizers</a></li>
-                                <li><a href="menu.html">Appetizers</a></li>
+                                <li><a href="#">Appetizers</a></li>
+                                <li><a href="#">Appetizers</a></li>
+                                <li><a href="#">Appetizers</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Specials</li>
                                 <li><a href="#">Appetizers</a></li>
@@ -105,92 +105,10 @@
         </header>
            <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-sm-3 col-sm-push-9">
-                    <p style="padding:20px;"></p>
-                    <h3 align=center>Our Lipsmacking Culinary Creations</h3>
-                </div>
-                <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-                    <div class="media">
-                        <div class="media-left media-middle">
-                            <a href="#">
-                                <img class="media-object img-thumbnail" src="images/fish.jpg" alt="Our Best Pizza">
-                            </a>
-                        </div>
-                        <div class="media-body">
-                            <h2 class="media-heading">Pad Thai  <span class="label label-danger label-xs">Hot</span>
-                                <span class="badge">£9.99</span></h2>
-                            <p>Pad Thai is now one of the world's favorite noodle dishes, and luckily it's easy to make at home with these delicious Pad Thai recipes. Choose from chicken pad thai to shrimp or vegetarian pad thai.</p>
-                            <p><a  href="#">More &raquo;</a></p>
-                        </div>
-                    </div>
-                </div>
             </div>
-
-
-            <div class="row">
-                <div class="col-xs-12 col-sm-3">
-                    <p style="padding:20px;"></p>
-                    <h3 align=center>This Month's Promotions</h3>
-                </div>
-                <div class="col-xs-12 col-sm-9">
-                    <h2>Thai chicken and sweet potato soup</h2>
-                    <p>A smooth and and spicy chicken soup with a vibrant colour that's packed full of Asian aromatics All for just £4.99 per person </p>
-                    <p><a href="#">More &raquo;</a></p>
-                </div>
             </div>
-
-            <div class="row">
-                <div class="col-xs-12 col-sm-3">
-                    <p style="padding:20px;"></p>
-                    <h3 align=center>Meet our Culinary Specialists</h3>
-                </div>
-                <div class="col-xs-12 col-sm-9">
-                    <h2>Tangmo Pattanapong</h2>
-                    <h4>Executive Chef</h4>
-                    <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Thai fusion experiences. </p>
-                    <p><a href="#">More &raquo;</a></p>
-                </div>
-            </div>
-        </div>
-           <footer>
-            <div class="container">
-                <div class="row">             
-                    <div class="col-xs-6 col-sm-3 col-md-3">
-                        <h5>Links</h5>
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Menu</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-xs-6 col-sm-5 col-md-5">
-                        <h5>Our Address</h5>
-                        <address>
-                            121, Clear Water Bay Road<br>
-                            Clear Water Bay<br>
-                            LONDON<br>
-                            Tel.: +852 1234 5678<br>
-                            Fax: +852 8765 4321<br>
-                            Email: <a href="mailto:thaifoodexperience@food.net">thaifoodrxperience@food.net</a>
-                        </address>
-                    </div>
-                    <div class="col-xs-12 col-sm-4 col-md-4">
-                        <div style="padding: 40px 10px;">
-                            <a href="http://google.com/+"> <i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                            <a href="http://www.facebook.com/profile.php?id="> <i class="fa fa-facebook" aria-hidden="true"></i></a>
-                            <a href="http://www.linkedin.com/in/"> <i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                            <a href="http://twitter.com/"> <i class="fa fa-twitter" aria-hidden="true"></i></a>
-                            <a href="http://youtube.com/"> <i class="fa fa-youtube" aria-hidden="true"></i></a>
-                            <a href="mailto:"> <i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-xs-12">
-                        <p style="padding:10px;"></p>
-                        <p align=center>Â© Copyright 2015 Thai Food Experience</p>
-                    </div>
-                </div>
-            </div>
+            
+             
         </footer>
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
