--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+                        <li class="active"><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
                         <li><a href="about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
 
                         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"
@@ -43,7 +43,7 @@
                             </ul>
 
                         </li>
-                        <li><a href="contact.html"><i class="fa fa-envelope-o" aria-hidden="true"></i> Contact</a></li>
+                        <li><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i> Contact</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
@@ -91,66 +91,8 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 col-sm-10">
-                        <h1>Thai Food Experience</h1>
-                        <p style="padding:40px;"></p>
-                        <p>We take inspiration from the Thai's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
-                    </div>
-                    <div class="col-xs-12 col-sm-2">
-                        <p style="padding: 40px;"></p>
-                        <a type="button" class="btn btn-warning btn-block" href="#reservation">Reserve Table</a>
-                    </div>
-                </div>
-            </div>
-        </header>
-           <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-3 col-sm-push-9">
-                    <p style="padding:20px;"></p>
-                    <h3 align=center>Our Lipsmacking Culinary Creations</h3>
-                </div>
-                <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-                    <div class="media">
-                        <div class="media-left media-middle">
-                            <a href="#">
-                                <img class="media-object img-thumbnail" src="images/fish.jpg" alt="Our Best Pizza">
-                            </a>
-                        </div>
-                        <div class="media-body">
-                            <h2 class="media-heading">Pad Thai  <span class="label label-danger label-xs">Hot</span>
-                                <span class="badge">£9.99</span></h2>
-                            <p>Pad Thai is now one of the world's favorite noodle dishes, and luckily it's easy to make at home with these delicious Pad Thai recipes. Choose from chicken pad thai to shrimp or vegetarian pad thai.</p>
-                            <p><a  href="#">More &raquo;</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="row">
-                <div class="col-xs-12 col-sm-3">
-                    <p style="padding:20px;"></p>
-                    <h3 align=center>This Month's Promotions</h3>
-                </div>
-                <div class="col-xs-12 col-sm-9">
-                    <h2>Thai chicken and sweet potato soup</h2>
-                    <p>A smooth and and spicy chicken soup with a vibrant colour that's packed full of Asian aromatics All for just £4.99 per person </p>
-                    <p><a href="#">More &raquo;</a></p>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-xs-12 col-sm-3">
-                    <p style="padding:20px;"></p>
-                    <h3 align=center>Meet our Culinary Specialists</h3>
-                </div>
-                <div class="col-xs-12 col-sm-9">
-                    <h2>Tangmo Pattanapong</h2>
-                    <h4>Executive Chef</h4>
-                    <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Thai fusion experiences. </p>
-                    <p><a href="#">More &raquo;</a></p>
-                </div>
-            </div>
+                  </div>
+    
         </div>
            <footer>
             <div class="container">
