--- a/menu.html
+++ b/menu.html
@@ -109,6 +109,45 @@
             </div>
             
              
+          <footer>
+            <div class="container">
+                <div class="row">             
+                    <div class="col-xs-6 col-sm-3 col-md-3">
+                        <h5>Links</h5>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Menu</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-xs-6 col-sm-5 col-md-5">
+                        <h5>Our Address</h5>
+                        <address>
+                            121, Clear Water Bay Road<br>
+                            Clear Water Bay<br>
+                            LONDON<br>
+                            Tel.: +852 1234 5678<br>
+                            Fax: +852 8765 4321<br>
+                            Email: <a href="mailto:thaifoodexperience@food.net">thaifoodrxperience@food.net</a>
+                        </address>
+                    </div>
+                    <div class="col-xs-12 col-sm-4 col-md-4">
+                        <div style="padding: 40px 10px;">
+                            <a href="http://google.com/+"> <i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                            <a href="http://www.facebook.com/profile.php?id="> <i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a href="http://www.linkedin.com/in/"> <i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="http://twitter.com/"> <i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href="http://youtube.com/"> <i class="fa fa-youtube" aria-hidden="true"></i></a>
+                            <a href="mailto:"> <i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-xs-12">
+                        <p style="padding:10px;"></p>
+                        <p align=center>Â© Copyright 2015 Thai Food Experience</p>
+                    </div>
+                </div>
+            </div>
         </footer>
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
