--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
- <nav class="navbar navbar-inverse navbar-fixed-top">
+   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed"
@@ -109,7 +109,7 @@
             <div class="row">
                 <h2 class="col-xs-12 col-md-2">Starters</h2>
                 <div class="col-xs-12 col-md-10">
-                <div class="col-xs-12  col-sm-6 col-md-6">
+                    <div class="col-xs-12  col-sm-6 col-md-6">
                         <p class="food title"><span>CRISPY PRAWNS    </span><span class="pull-right">5.50</span></p>
 
                         <p>Coated in crispy breadcrumbs & deep-fried, served with Rosa’s sweet chilli sauce.</p>
@@ -159,12 +159,10 @@
                         <p>Signature red curry with butternut squash & sweet basil.</p>
                     </div>
 
-                    <div class="col-xs-12 col-sm-6  col-md-6 >
+                    <div class="col-xs-12 col-sm-6  col-md-6 ">
                         <p class="food-title"><span>BEEF MUSSAMAN CURRY</span><span class="pull-right">11.00</span></p>
                         <p>Smooth yellow curry with silk road spices, potatoes & cashew nuts</p>
-
                     </div>
-
                     <div class="col-xs-12 col-sm-6  col-md-6 ">
                         <p class="food-title"><span>GREEN CURRY</span><span class="pull-right"></span></p>
                         <p>One of Thailand's most loved curries. With aubergine, bamboo shoots & sweet basil.</p>
@@ -179,54 +177,87 @@
                         <p class="food-title"><span>Chicken/Beef</span><span class="pull-right">9.50</span></p>
                         <p class="food-title"><span>Prawwns</span><span class="pull-right">12</span></p>
                     </div>
+                    <div class="col-xs-12  col-sm-6 col-md-6">
+                        <p class="food title"><span>CHICKEN & CASHEW NUTS</span><span class="pull-right">10</span></p>
+
+                        <p>Stir fried with mushroom in Rosa's homemade sauce.</p>
+                    </div>
+                    <div class="col-xs-12  col-sm-6 col-md-6">
+                        <p class="food title"><span>ROASTED DUCK CURRY</span><span class="pull-right">13</span></p>
+
+                        <p>Red curry with a hint of sweetness from grapes, pineapple & cherry tomatoes.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+            <div class="col-xs-12 col-sm-12 col-md-12">
+                <div class="row">
+                    <h2 class="col-xs-12 col-md-2">Sides</h2>
+                    <div class="col-xs-12 col-md-10">
+                        <div class="col-xs-12  col-sm-6 col-md-6">
+                            <p class="food title"><span>STEAMED JASMINE RICE</span><span class="pull-right">2.50</span></p>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-6">
+                            <p class="food-title"><span>EGG FRIED RICE</span><span class="pull-right">4.00</span></p>
+                           
+                        </div>
+                         <div class="col-xs-12  col-sm-6 col-md-6">
+                            <p class="food title"><span>STEAMED COCONUT RICE</span><span class="pull-right">4.00</span></p>
+                        </div>
+                         <div class="col-xs-12  col-sm-6 col-md-6">
+                            <p class="food title"><span>BROWN RICE</span><span class="pull-right">3.50</span></p>
+                        </div>
+                         <div class="col-xs-12  col-sm-6 col-md-6">
+                            <p class="food title"><span>PRAWN CRACKERS</span><span class="pull-right">2.50</span></p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 
-<footer>
-    <div class="container">
-        <div class="row">             
-            <div class="col-xs-6 col-sm-3 col-md-3">
-                <h5>Links</h5>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Menu</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-            <div class="col-xs-6 col-sm-5 col-md-5">
-                <h5>Our Address</h5>
-                <address>
-                    121, Clear Water Bay Road<br>
-                    Clear Water Bay<br>
-                    LONDON<br>
-                    Tel.: +852 1234 5678<br>
-                    Fax: +852 8765 4321<br>
-                    Email: <a href="mailto:thaifoodexperience@food.net">thaifoodrxperience@food.net</a>
-                </address>
-            </div>
-            <div class="col-xs-12 col-sm-4 col-md-4">
-                <div style="padding: 40px 10px;">
-                    <a href="http://google.com/+"> <i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                    <a href="http://www.facebook.com/profile.php?id="> <i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    <a href="http://www.linkedin.com/in/"> <i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                    <a href="http://twitter.com/"> <i class="fa fa-twitter" aria-hidden="true"></i></a>
-                    <a href="http://youtube.com/"> <i class="fa fa-youtube" aria-hidden="true"></i></a>
-                    <a href="mailto:"> <i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+    <footer>
+        <div class="container">
+            <div class="row">             
+                <div class="col-xs-6 col-sm-3 col-md-3">
+                    <h5>Links</h5>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="col-xs-6 col-sm-5 col-md-5">
+                    <h5>Our Address</h5>
+                    <address>
+                        121, Clear Water Bay Road<br>
+                        Clear Water Bay<br>
+                        LONDON<br>
+                        Tel.: +852 1234 5678<br>
+                        Fax: +852 8765 4321<br>
+                        Email: <a href="mailto:thaifoodexperience@food.net">thaifoodrxperience@food.net</a>
+                    </address>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <div style="padding: 40px 10px;">
+                        <a href="http://google.com/+"> <i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                        <a href="http://www.facebook.com/profile.php?id="> <i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        <a href="http://www.linkedin.com/in/"> <i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        <a href="http://twitter.com/"> <i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        <a href="http://youtube.com/"> <i class="fa fa-youtube" aria-hidden="true"></i></a>
+                        <a href="mailto:"> <i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                    </div>
+                </div>
+                <div class="col-xs-12">
+                    <p style="padding:10px;"></p>
+                    <p align=center>Â© Copyright 2015 Thai Food Experience</p>
                 </div>
             </div>
-            <div class="col-xs-12">
-                <p style="padding:10px;"></p>
-                <p align=center>Â© Copyright 2015 Thai Food Experience</p>
-            </div>
         </div>
-    </div>
-</footer>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
