work on jumbotron studied javascript all day

--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
         </div>
     </div>
 </div>
-<header class="jumbotron">
+<header class="jumbotron jumb_about">
 
     <!-- Main component for a primary marketing message or call to action -->
 
