--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="media">
                 <div class="media-left media-middle">
                     <a href="#">
-                        <img class="media-object img-thumbnail" src="images/fish.jpg" alt="Our Best Pizza">
+                    <img class="media-object img-thumbnail" src="images/pad_thai.jpg" alt="Our Best Pizza" style="width: 200px;">
                     </a>
                 </div>
                 <div class="media-body">
