images added a placed into position

--- a/menu.html
+++ b/menu.html
@@ -85,7 +85,24 @@
         </div>
     </div>
 </div>
-<header class="jumbotron">
+<header class="jumbotron jumb_menu">
+
+    <!-- Main component for a primary marketing message or call to action -->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-10">
+                <h1>Thai Food Experience</h1>
+                <p style="padding:40px;"></p>
+                <p>We take inspiration from the Thai's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+            </div>
+            <div class="col-xs-12 col-sm-2">
+                <p style="padding: 40px;"></p>
+                <a type="button" class="btn btn-warning btn-block" href="#reservation">Reserve Table</a>
+            </div>
+        </div>
+    </div>
+</header>
 
     <!-- Main component for a primary marketing message or call to action -->
 
