--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@
                 </div>
                 <div class="col-xs-12 col-sm-4 col-md-4">
                     <div style="padding: 40px 10px;">
-                        <a href="http://google.com/+"> <i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                        <a href="http://www.facebook.com/profile.php?id="> <i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        <a href="http://www.linkedin.com/in/"> <i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        <a href="http://twitter.com/"> <i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        <a href="http://youtube.com/"> <i class="fa fa-youtube" aria-hidden="true"></i></a>
-                        <a href="mailto:"> <i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                        <a href="http://google.com/+"> <i class="fa fa-google-plus-square" aria-hidden="true" style="color:red;"></i></a>
+                        <a href="http://www.facebook.com/profile.php?id="> <i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                        <a href="http://www.linkedin.com/in/"> <i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                        <a href="http://twitter.com/"> <i class="fa fa-twitter-square" aria-hidden="true" style="color:#4099FF"></i></a>
+                        <a href="http://youtube.com/"> <i class="fa fa-youtube-square" aria-hidden="true" style="color: #cc181e"></i></a>
+                        <a href="mailto:"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
                     </div>
                 </div>
                 <div class="col-xs-12">
