--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
- <nav class="navbar navbar-inverse navbar-fixed-top">
+   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed"
@@ -105,20 +105,19 @@
 </header>
 <div class="container">
     <div class="row">
-        <div class="col-xs-12 col-sm-3 col-sm-push-9">
+        <div class="col-xs-12 col-sm-3">
             <p style="padding:20px;"></p>
-            <h3 align=center>Our Lipsmacking Culinary Creations</h3>
+            <h3 align=center>This Month's Promotions</h3>
         </div>
-        <div class="col-xs-12 col-sm-9 col-sm-pull-3">
+        <div class="col-xs-12 col-sm-9">
             <div class="media">
                 <div class="media-left media-middle">
                     <a href="#">
-                    <img class="media-object img-thumbnail" src="images/pad_thai.jpg" alt="Our Best Pizza" style="width: 200px;">
+                        <img class="media-object img-thumbnail" src="images/pad_thai.jpg" alt="Our Best Pizza" style="width: 200px;">
                     </a>
                 </div>
                 <div class="media-body">
-                    <h2 class="media-heading">Pad Thai  <span class="label label-danger label-xs">Hot</span>
-                        <span class="badge">£9.99</span></h2>
+                    <h2 class="media-heading">Pad Thai </h2>
                         <p>Pad Thai is now one of the world's favorite noodle dishes, and luckily it's easy to make at home with these delicious Pad Thai recipes. Choose from chicken pad thai to shrimp or vegetarian pad thai.</p>
                         <p><a  href="#">More &raquo;</a></p>
                     </div>
@@ -130,69 +129,89 @@
         <div class="row">
             <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
-                <h3 align=center>This Month's Promotions</h3>
+                <h3 align=center>All Time Favourite</h3>
             </div>
-            <div class="col-xs-12 col-sm-9">
-                <h2>Thai chicken and sweet potato soup</h2>
-                <p>A smooth and and spicy chicken soup with a vibrant colour that's packed full of Asian aromatics All for just £4.99 per person </p>
-                <p><a href="#">More &raquo;</a></p>
-            </div>
+           
+              <div class="col-xs-12 col-sm-9">
+                <div class="media">
+                    <div class="media-left media-middle">
+                        <a href="#">
+                            <img class="media-object img-thumbnail" src="images/soup.jpg" alt="Our Best Pizza" style="width: 200px;">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h2 class="media-heading">Thai chicken and sweet potato soup</h2>
+                        <p>A smooth and and spicy chicken soup with a vibrant colour that's packed full of Asian aromatics.</p>
+                            <p><a  href="#">More &raquo;</a></p>
+                        </div>
+                    </div>
+                </div>
         </div>
 
         <div class="row">
             <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
-                <h3 align=center>Meet our Culinary Specialists</h3>
+                <h3 align=center>Our Speciality</h3>
             </div>
+
             <div class="col-xs-12 col-sm-9">
-                <h2>Tangmo Pattanapong</h2>
-                <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Thai fusion experiences. </p>
-                <p><a href="#">More &raquo;</a></p>
-            </div>
-        </div>
-    </div>
-    <footer>
-        <div class="container">
-            <div class="row">             
-                <div class="col-xs-6 col-sm-3 col-md-3">
-                    <h5>Links</h5>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-xs-6 col-sm-5 col-md-5">
-                    <h5>Our Address</h5>
-                    <address>
-                        121, Clear Water Bay Road<br>
-                        Clear Water Bay<br>
-                        LONDON<br>
-                        Tel.: +852 1234 5678<br>
-                        Fax: +852 8765 4321<br>
-                        Email: <a href="mailto:thaifoodexperience@food.net">thaifoodrxperience@food.net</a>
-                    </address>
-                </div>
-                <div class="col-xs-12 col-sm-4 col-md-4">
-                    <div style="padding: 40px 10px;">
-                        <a href="http://google.com/+"> <i class="fa fa-google-plus-square" aria-hidden="true" style="color:red;"></i></a>
-                        <a href="http://www.facebook.com/profile.php?id="> <i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-                        <a href="http://www.linkedin.com/in/"> <i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-                        <a href="http://twitter.com/"> <i class="fa fa-twitter-square" aria-hidden="true" style="color:#4099FF"></i></a>
-                        <a href="http://youtube.com/"> <i class="fa fa-youtube-square" aria-hidden="true" style="color: #cc181e"></i></a>
-                        <a href="mailto:"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
+                <div class="media">
+                    <div class="media-left media-middle">
+                        <a href="#">
+                            <img class="media-object img-thumbnail" src="images/lobster.jpg" alt="Our Best Pizza" style="width: 200px;">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h2 class="media-heading">Lime, Thai Chili and Cilantro Grilled Lobster</h2>
+                        <p>Bacon ipsum dolor amet meatloaf cupim ground round strip steak, 
+                            sausage turducken bacon beef ribs corned beef frankfurter turkey filet mignon. Fatback doner ham ham hock turducken.</p>
+                            <p><a  href="#">More &raquo;</a></p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-xs-12">
-                    <p style="padding:10px;"></p>
-                    <p align=center>Â© Copyright 2015 Thai Food Experience</p>
-                </div>
             </div>
         </div>
-    </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-</body>
-</html>
+        <footer>
+            <div class="container">
+                <div class="row">             
+                    <div class="col-xs-6 col-sm-3 col-md-3">
+                        <h5>Links</h5>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Menu</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-xs-6 col-sm-5 col-md-5">
+                        <h5>Our Address</h5>
+                        <address>
+                            121, Clear Water Bay Road<br>
+                            Clear Water Bay<br>
+                            LONDON<br>
+                            Tel.: +852 1234 5678<br>
+                            Fax: +852 8765 4321<br>
+                            Email: <a href="mailto:thaifoodexperience@food.net">thaifoodrxperience@food.net</a>
+                        </address>
+                    </div>
+                    <div class="col-xs-12 col-sm-4 col-md-4">
+                        <div style="padding: 40px 10px;">
+                            <a href="http://google.com/+"> <i class="fa fa-google-plus-square" aria-hidden="true" style="color:red;"></i></a>
+                            <a href="http://www.facebook.com/profile.php?id="> <i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                            <a href="http://www.linkedin.com/in/"> <i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                            <a href="http://twitter.com/"> <i class="fa fa-twitter-square" aria-hidden="true" style="color:#4099FF"></i></a>
+                            <a href="http://youtube.com/"> <i class="fa fa-youtube-square" aria-hidden="true" style="color: #cc181e"></i></a>
+                            <a href="mailto:"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-xs-12">
+                        <p style="padding:10px;"></p>
+                        <p align=center>Â© Copyright 2015 Thai Food Experience</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+    </body>
+    </html>
