--- a/about.html
+++ b/about.html
@@ -140,19 +140,19 @@
                         <div class="col-xs-12 col-sm-6 col-lg-4">
                             <div class="panel panel-primary">
                                 <div class="panel-heading">
-                                    <h3 class="panel-title">Fact At The Glance</h3>
+                                    <h3 class="panel-title">Fact About Us</h3>
                                 </div>
                             </div>
                             <div class="panel-body">
                                 <dl class="dl-horizontal">
-                                    <dt>Started</dt>
-                                    <dd>3.Feb 2011</dd>
-                                    <dt>Major Stake Holder</dt>
-                                    <dd>Fine Arts Of Sofas</dd>
-                                    <dt>Last Year's Turnower</dt>
-                                    <dd>£1,250,000</dd>
+                                    <dt>Customers served</dt>
+                                    <dd>2.2M</dd>
+                                    <dt>Pad Thais server</dt>
+                                    <dd>200k</dd>
+                                    <dt>Coconut Milk used</dt>
+                                    <dd>90T</dd>
                                     <dt>Employees</dt>
-                                    <dd>55</dd>
+                                    <dd>25</dd>
                                 </dl>
                             </div>
                         </div>
@@ -161,7 +161,7 @@
                     <div class="row row-content" id="corporate"> 
 
                         <div class="col-xs-12">
-                            <h1 class=>Corporate Leadership</h1>
+                            <h1 class=>Who takes care of you.</h1>
                             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true"> 
 
                                 <div class="panel panel-default">
@@ -224,7 +224,7 @@
                             <nav class="hidden-xs col-sm-2" id="myScrollspy">
                                 <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="400">
                                     <li><a href="#history">Our History</a></li>
-                                    <li><a href="#corporate">Corporate</a></li>                    
+                                    <li><a href="#corporate">Staff</a></li>                    
                                 </ul>
                             </nav>
                         </div>
