--- a/index.html
+++ b/index.html
@@ -40,10 +40,15 @@
                     <li role="separator" class="divider"></li>
                     <li class="dropdown-header">Specials</li>
                     <li><a href="#">Appetizers</a></li>
+                    
                 </ul>
 
             </li>
-            <li><a href="contact.html"><i class="fa fa-envelope-o" aria-hidden="true"></i> Contact</a></li>
+            <li><a href="contact.html"><i class="fa fa-envelope-o"  aria-hidden="true"></i> Contact</a></li>
+            <li><a href="http://www.facebook.com/profile.php?id="> <i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a></li>
+            <li><a href="http://twitter.com/"> <i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a></li>
+            <li><a href="http://youtube.com/"> <i class="fa fa-youtube fa-jg" aria-hidden="true"></i></a></li>
+            <li><a href="http://instagram.com/"> <i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li>
@@ -195,14 +200,7 @@
                         </address>
                     </div>
                     <div class="col-xs-12 col-sm-4 col-md-4">
-                        <div style="padding: 40px 10px;">
-                            <a href="http://google.com/+"> <i class="fa fa-google-plus-square" aria-hidden="true" style="color:red;"></i></a>
-                            <a href="http://www.facebook.com/profile.php?id="> <i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-                            <a href="http://www.linkedin.com/in/"> <i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-                            <a href="http://twitter.com/"> <i class="fa fa-twitter-square" aria-hidden="true" style="color:#4099FF"></i></a>
-                            <a href="http://youtube.com/"> <i class="fa fa-youtube-square" aria-hidden="true" style="color: #cc181e"></i></a>
-                            <a href="mailto:"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
-                        </div>
+                      
                     </div>
                     <div class="col-xs-12">
                         <p style="padding:10px;"></p>
