--- a/about.html
+++ b/about.html
@@ -44,6 +44,10 @@
 
             </li>
             <li><a href="contact.html"><i class="fa fa-envelope-o" aria-hidden="true"></i> Contact</a></li>
+            <li><a href="http://www.facebook.com/profile.php?id="> <i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a></li>
+            <li><a href="http://twitter.com/"> <i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a></li>
+            <li><a href="http://youtube.com/"> <i class="fa fa-youtube fa-jg" aria-hidden="true"></i></a></li>
+            <li><a href="http://instagram.com/"> <i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li>
@@ -253,14 +257,7 @@
                         </address>
                     </div>
                     <div class="col-xs-12 col-sm-4 col-md-4">
-                        <div style="padding: 40px 10px;">
-                            <a href="http://google.com/+"> <i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                            <a href="http://www.facebook.com/profile.php?id="> <i class="fa fa-facebook" aria-hidden="true"></i></a>
-                            <a href="http://www.linkedin.com/in/"> <i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                            <a href="http://twitter.com/"> <i class="fa fa-twitter" aria-hidden="true"></i></a>
-                            <a href="http://youtube.com/"> <i class="fa fa-youtube" aria-hidden="true"></i></a>
-                            <a href="mailto:"> <i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-                        </div>
+                     
                     </div>
                     <div class="col-xs-12">
                         <p style="padding:10px;"></p>
