--- a/menu.html
+++ b/menu.html
@@ -241,32 +241,10 @@
     <footer>
         <div class="container">
             <div class="row">             
-                <div class="col-xs-6 col-sm-3 col-md-3">
-                    <h5>Links</h5>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-xs-6 col-sm-5 col-md-5">
-                    <h5>Our Address</h5>
-                    <address>
-                        121, Clear Water Bay Road<br>
-                        Clear Water Bay<br>
-                        LONDON<br>
-                        Tel.: +852 1234 5678<br>
-                        Fax: +852 8765 4321<br>
-                        Email: <a href="mailto:thaifoodexperience@food.net">thaifoodrxperience@food.net</a>
-                    </address>
-                </div>
-                <div class="col-xs-12 col-sm-4 col-md-4">
-                 
-                </div>
+                
                 <div class="col-xs-12">
-                    <p style="padding:10px;"></p>
-                    <p align=center>Â© Copyright 2015 Thai Food Experience</p>
+                    <p style="margin-bottom:15px;"></p>
+                    <p align=center>© Copyright 2015 Thai Food Experience</p>
                 </div>
             </div>
         </div>
