home page changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
-   <nav class="navbar navbar-inverse navbar-fixed-top">
+ <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed"
@@ -90,7 +90,7 @@
         </div>
     </div>
 </div>
-<header class="jumbotron">
+<header class="jumbotron jumb_home">
 
     <!-- Main component for a primary marketing message or call to action -->
 
@@ -108,85 +108,101 @@
         </div>
     </div>
 </header>
+<div class="container_home_page">
+    <div class="row ">
+       <div class="col-xs-12 col-sm-3 images">
+      <img src="images/pad_thai.jpg" alt="Our Best Pizza" >
+    </div>
+    <div class="col-xs-12 col-sm-3 images">
+        <img src="images/pad_thai.jpg" alt="Our Best Pizza">
+    </div>
+    <div class="col-xs-12 col-sm-3 images">
+        <img  src="images/pad_thai.jpg" alt="Our Best Pizza">
+    </div>
+    <div class="col-xs-12 col-sm-3 images">
+        <img  src="images/pad_thai.jpg" alt="Our Best Pizza" >
+    </div>
+</div>
+</div>
 <div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-3">
-            <p style="padding:20px;"></p>
-            <h3 align=center>This Month's Promotions</h3>
-        </div>
-        <div class="col-xs-12 col-sm-9">
-            <div class="media">
-                <div class="media-left media-middle">
-                    <a href="#">
-                        <img class="media-object img-thumbnail" src="images/pad_thai.jpg" alt="Our Best Pizza" style="width: 200px;">
-                    </a>
-                </div>
-                <div class="media-body">
-                    <h2 class="media-heading">Pad Thai </h2>
-                        <p>Pad Thai is now one of the world's favorite noodle dishes, and luckily it's easy to make at home with these delicious Pad Thai recipes. Choose from chicken pad thai to shrimp or vegetarian pad thai.</p>
-                        <p><a  href="#">More &raquo;</a></p>
-                    </div>
-                </div>
+<div class="row">
+    <div class="col-xs-12 col-sm-3">
+        <p style="padding:20px;"></p>
+        <h3 align=center>This Month's Promotions</h3>
+    </div>
+    <div class="col-xs-12 col-sm-9">
+        <div class="media">
+            <div class="media-left media-middle">
+                <a href="#">
+                    <img class="media-object img-thumbnail" src="images/pad_thai.jpg" alt="Our Best Pizza" style="width: 200px;">
+                </a>
+            </div>
+            <div class="media-body">
+                <h2 class="media-heading">Pad Thai </h2>
+                <p>Pad Thai is now one of the world's favorite noodle dishes, and luckily it's easy to make at home with these delicious Pad Thai recipes. Choose from chicken pad thai to shrimp or vegetarian pad thai.</p>
+                <p><a  href="#">More &raquo;</a></p>
             </div>
         </div>
+    </div>
+</div>
 
 
-        <div class="row">
-            <div class="col-xs-12 col-sm-3">
-                <p style="padding:20px;"></p>
-                <h3 align=center>All Time Favourite</h3>
+<div class="row">
+    <div class="col-xs-12 col-sm-3">
+        <p style="padding:20px;"></p>
+        <h3 align=center>All Time Favourite</h3>
+    </div>
+
+    <div class="col-xs-12 col-sm-9">
+        <div class="media">
+            <div class="media-left media-middle">
+                <a href="#">
+                    <img class="media-object img-thumbnail" src="images/soup.jpg" alt="Our Best Pizza" style="width: 200px;">
+                </a>
             </div>
-           
-              <div class="col-xs-12 col-sm-9">
-                <div class="media">
-                    <div class="media-left media-middle">
-                        <a href="#">
-                            <img class="media-object img-thumbnail" src="images/soup.jpg" alt="Our Best Pizza" style="width: 200px;">
-                        </a>
-                    </div>
-                    <div class="media-body">
-                        <h2 class="media-heading">Thai chicken and sweet potato soup</h2>
-                        <p>A smooth and and spicy chicken soup with a vibrant colour that's packed full of Asian aromatics.</p>
-                            <p><a  href="#">More &raquo;</a></p>
-                        </div>
-                    </div>
-                </div>
+            <div class="media-body">
+                <h2 class="media-heading">Thai chicken and sweet potato soup</h2>
+                <p>A smooth and and spicy chicken soup with a vibrant colour that's packed full of Asian aromatics.</p>
+                <p><a  href="#">More &raquo;</a></p>
+            </div>
         </div>
+    </div>
+</div>
 
-        <div class="row">
-            <div class="col-xs-12 col-sm-3">
-                <p style="padding:20px;"></p>
-                <h3 align=center>Our Speciality</h3>
+<div class="row">
+    <div class="col-xs-12 col-sm-3">
+        <p style="padding:20px;"></p>
+        <h3 align=center>Our Speciality</h3>
+    </div>
+
+    <div class="col-xs-12 col-sm-9">
+        <div class="media">
+            <div class="media-left media-middle">
+                <a href="#">
+                    <img class="media-object img-thumbnail" src="images/lobster.jpg" alt="Our Best Pizza" style="width: 200px;">
+                </a>
             </div>
-
-            <div class="col-xs-12 col-sm-9">
-                <div class="media">
-                    <div class="media-left media-middle">
-                        <a href="#">
-                            <img class="media-object img-thumbnail" src="images/lobster.jpg" alt="Our Best Pizza" style="width: 200px;">
-                        </a>
-                    </div>
-                    <div class="media-body">
-                        <h2 class="media-heading">Lime, Thai Chili and Cilantro Grilled Lobster</h2>
-                        <p>Bacon ipsum dolor amet meatloaf cupim ground round strip steak, 
-                            sausage turducken bacon beef ribs corned beef frankfurter turkey filet mignon. Fatback doner ham ham hock turducken.</p>
-                            <p><a  href="#">More &raquo;</a></p>
-                        </div>
-                    </div>
+            <div class="media-body">
+                <h2 class="media-heading">Lime, Thai Chili and Cilantro Grilled Lobster</h2>
+                <p>Bacon ipsum dolor amet meatloaf cupim ground round strip steak, 
+                    sausage turducken bacon beef ribs corned beef frankfurter turkey filet mignon. Fatback doner ham ham hock turducken.</p>
+                    <p><a  href="#">More &raquo;</a></p>
                 </div>
             </div>
         </div>
-        <footer>
-            <div class="container">
-                <div class="row">             
-                    <div class="col-xs-12">
-                        <p style="margin-bottom:15px;"></p>
-                        <p align=center>© Copyright 2015 Thai Food Experience</p>
-                    </div>
-                </div>
+    </div>
+</div>
+<footer>
+    <div class="container">
+        <div class="row">             
+            <div class="col-xs-12">
+                <p style="margin-bottom:15px;"></p>
+                <p align=center>© Copyright 2015 Thai Food Experience</p>
             </div>
-        </footer>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-    </body>
-    </html>
+        </div>
+    </div>
+</footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+</body>
+</html>
