started to add animations

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
@@ -45,7 +46,7 @@
 
             </li>
             <li><a href="contact.html"><i class="fa fa-envelope-o"  aria-hidden="true"></i> Contact</a></li>
-            <li><a href="http://www.facebook.com/profile.php?id="> <i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a></li>
+            <li><a href="http://www.facebook.com/"> <i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a></li>
             <li><a href="http://twitter.com/"> <i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a></li>
             <li><a href="http://youtube.com/"> <i class="fa fa-youtube fa-jg" aria-hidden="true"></i></a></li>
             <li><a href="http://instagram.com/"> <i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a></li>
@@ -97,13 +98,13 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-10">
-                <h1>Thai Food Experience</h1>
+                <h1 class="jumbo-heading ">Thai Food Experience</h1>
                 <p style="padding:40px;"></p>
                 <p>We take inspiration from the Thai's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
             </div>
             <div class="col-xs-12 col-sm-2">
                 <p style="padding: 40px;"></p>
-                <a type="button" class="btn btn-warning btn-block" href="#reservation">Reserve Table</a>
+                <a type="button" class="btn btn-warning btn-block reserve" href="#reservation">Reserve Table</a>
             </div>
         </div>
     </div>
@@ -111,13 +112,13 @@
 <div class="container_home_page">
     <div class="row ">
        <div class="col-xs-12 col-sm-3 images">
-      <img src="images/pad_thai.jpg" alt="Our Best Pizza" >
+      <img src="images/starter.jpg" alt="Our Best Pizza" >
     </div>
     <div class="col-xs-12 col-sm-3 images">
-        <img src="images/pad_thai.jpg" alt="Our Best Pizza">
+        <img src="images/green-curry.jpg" alt="Our Best Pizza">
     </div>
     <div class="col-xs-12 col-sm-3 images">
-        <img  src="images/pad_thai.jpg" alt="Our Best Pizza">
+        <img  src="images/salad.jpg" alt="Our Best Pizza">
     </div>
     <div class="col-xs-12 col-sm-3 images">
         <img  src="images/pad_thai.jpg" alt="Our Best Pizza" >
@@ -204,5 +205,6 @@
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
