--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
@@ -44,7 +45,7 @@
 
             </li>
             <li><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i> Contact</a></li>
-            <li><a href="http://www.facebook.com/profile.php?id="> <i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a></li>
+            <li><a href="http://www.facebook.com/"> <i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a></li>
             <li><a href="http://twitter.com/"> <i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a></li>
             <li><a href="http://youtube.com/"> <i class="fa fa-youtube fa-jg" aria-hidden="true"></i></a></li>
             <li><a href="http://instagram.com/"> <i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a></li>
@@ -96,13 +97,13 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-10">
-                <h1>Thai Food Experience</h1>
+                <h1  class="jumbo-heading">Thai Food Experience</h1>
                 <p style="padding:40px;"></p>
                 <p>We take inspiration from the Thai's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
             </div>
             <div class="col-xs-12 col-sm-2">
                 <p style="padding: 40px;"></p>
-                <a type="button" class="btn btn-warning btn-block" href="#reservation">Reserve Table</a>
+                <a type="button" class="btn btn-warning btn-block reserve" href="#reservation">Reserve Table</a>
             </div>
         </div>
     </div>
@@ -206,5 +207,6 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
