work on index page

--- a/index.html
+++ b/index.html
@@ -112,16 +112,20 @@
 <div class="container_home_page">
     <div class="row ">
        <div class="col-xs-12 col-sm-3 images">
-      <img src="images/starter.jpg" alt="Our Best Pizza" >
+      <img class="menu-img"src="images/starter.jpg" alt="Starters" >
+      <h1 class="menu-items">Starters</h1>
     </div>
     <div class="col-xs-12 col-sm-3 images">
-        <img src="images/green-curry.jpg" alt="Our Best Pizza">
+        <img class="menu-img" src="images/green-curry.jpg" alt="Mains">
+        <h1 class="menu-items">Salads</h1>
     </div>
     <div class="col-xs-12 col-sm-3 images">
-        <img  src="images/salad.jpg" alt="Our Best Pizza">
+        <img class="menu-img"  src="images/salad.jpg" alt="Salads">
+        <h1 class="menu-items">Mains</h1>
     </div>
     <div class="col-xs-12 col-sm-3 images">
-        <img  src="images/pad_thai.jpg" alt="Our Best Pizza" >
+        <img  class="menu-img"  src="images/desserts.jpg" alt="Desserts" >
+        <h1 class="menu-items">Desserts</h1>
     </div>
 </div>
 </div>
