--- a/contact.html
+++ b/contact.html
@@ -112,6 +112,25 @@
 <!-- Main component for a primary marketing message or call to action -->
 
 <div class="container">
+  <div class="col-xs-12 col-sm-6 col-lg-4">
+                            <div class="panel panel-primary">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title">Fact About Us</h3>
+                                </div>
+                            </div>
+                            <div class="panel-body">
+                                <dl class="dl-horizontal">
+                                    <dt>Customers served</dt>
+                                    <dd>2.2M</dd>
+                                    <dt>Pad Thais server</dt>
+                                    <dd>200k</dd>
+                                    <dt>Coconut Milk used</dt>
+                                    <dd>90T</dd>
+                                    <dt>Employees</dt>
+                                    <dd>25</dd>
+                                </dl>
+                            </div>
+                        </div>
     <div class="row">
        <div class="col-xs-6 col-sm-5 col-md-5">
         <h5>Our Address</h5>
