home page channges

--- a/index.html
+++ b/index.html
@@ -112,19 +112,20 @@
 <div class="container_home_page">
     <div class="row ">
        <div class="col-xs-12 col-sm-3 images">
-      <img class="menu-img"src="images/starter.jpg" alt="Starters" >
+      <img class="menu-img img-thumbnail" src="images/starter.jpg" alt="Starters" >
       <h1 class="menu-items">Starters</h1>
     </div>
     <div class="col-xs-12 col-sm-3 images">
-        <img class="menu-img" src="images/green-curry.jpg" alt="Mains">
+        
+        <img class="menu-img img-thumbnail"  src="images/salad.jpg" alt="Salads">
         <h1 class="menu-items">Salads</h1>
     </div>
     <div class="col-xs-12 col-sm-3 images">
-        <img class="menu-img"  src="images/salad.jpg" alt="Salads">
+        <img class="menu-img img-thumbnail" src="images/green-curry.jpg" alt="Mains">
         <h1 class="menu-items">Mains</h1>
     </div>
     <div class="col-xs-12 col-sm-3 images">
-        <img  class="menu-img"  src="images/desserts.jpg" alt="Desserts" >
+        <img  class="menu-img img-thumbnail"  src="images/desserts.jpg" alt="Desserts" >
         <h1 class="menu-items">Desserts</h1>
     </div>
 </div>
@@ -136,14 +137,14 @@
         <h3 align=center>This Month's Promotions</h3>
     </div>
     <div class="col-xs-12 col-sm-9">
-        <div class="media">
-            <div class="media-left media-middle">
+        <div class="row">
+            <div class="col-xs-12 col-sm-3">
                 <a href="#">
-                    <img class="media-object img-thumbnail" src="images/pad_thai.jpg" alt="Our Best Pizza" style="width: 200px;">
+                    <img class=" img-thumbnail" src="images/pad_thai.jpg" alt="Our Best Pizza" >
                 </a>
             </div>
-            <div class="media-body">
-                <h2 class="media-heading">Pad Thai </h2>
+            <div class="col-xs-12 col-sm-9">
+                <h2 align=center>Pad Thai </h2>
                 <p>Pad Thai is now one of the world's favorite noodle dishes, and luckily it's easy to make at home with these delicious Pad Thai recipes. Choose from chicken pad thai to shrimp or vegetarian pad thai.</p>
                 <p><a  href="#">More &raquo;</a></p>
             </div>
@@ -159,14 +160,14 @@
     </div>
 
     <div class="col-xs-12 col-sm-9">
-        <div class="media">
-            <div class="media-left media-middle">
+        <div class="row">
+            <div class="col-xs-12 col-sm-3">
                 <a href="#">
-                    <img class="media-object img-thumbnail" src="images/soup.jpg" alt="Our Best Pizza" style="width: 200px;">
+                    <img class=" img-thumbnail" src="images/soup.jpg" alt="Our Best Pizza" >
                 </a>
             </div>
-            <div class="media-body">
-                <h2 class="media-heading">Thai chicken and sweet potato soup</h2>
+            <div class="col-xs-12 col-sm-9">
+                <h2 align=center>Thai chicken and sweet potato soup</h2>
                 <p>A smooth and and spicy chicken soup with a vibrant colour that's packed full of Asian aromatics.</p>
                 <p><a  href="#">More &raquo;</a></p>
             </div>
@@ -181,14 +182,14 @@
     </div>
 
     <div class="col-xs-12 col-sm-9">
-        <div class="media">
-            <div class="media-left media-middle">
+        <div class="row">
+            <div class="col-xs-12 col-sm-3">
                 <a href="#">
-                    <img class="media-object img-thumbnail" src="images/lobster.jpg" alt="Our Best Pizza" style="width: 200px;">
+                    <img class=" img-thumbnail" src="images/lobster.jpg" alt="Our Best Pizza" >
                 </a>
             </div>
-            <div class="media-body">
-                <h2 class="media-heading">Lime, Thai Chili and Cilantro Grilled Lobster</h2>
+            <div class="col-xs-12 col-sm-9">
+                <h2 align=center>Lime, Thai Chili and Cilantro Grilled Lobster</h2>
                 <p>Bacon ipsum dolor amet meatloaf cupim ground round strip steak, 
                     sausage turducken bacon beef ribs corned beef frankfurter turkey filet mignon. Fatback doner ham ham hock turducken.</p>
                     <p><a  href="#">More &raquo;</a></p>
